add more test cases.