@@ -25,7 +25,7 @@ import org.mockito.Mock;
 import org.mockito.Mockito;
 import org.testng.Assert;
 
-import java.util.Arrays;
+import java.util.List;
 
 import static com.amazonaws.athena.connectors.db2.Db2Constants.QUOTE_CHARACTER;
 
@@ -49,6 +49,6 @@ public class Db2QueryStringBuilderTest {
         Split split = Mockito.mock(Split.class);
         Mockito.when(split.getProperty(Mockito.eq("partition_number"))).thenReturn("0");
         Mockito.when(split.getProperty(Mockito.eq("PARTITIONING_COLUMN"))).thenReturn("PC");
-        Assert.assertEquals(Arrays.asList(" DATAPARTITIONNUM(PC) = 0"), builder.getPartitionWhereClauses(split));
+        Assert.assertEquals(List.of(" DATAPARTITIONNUM(PC) = 0"), builder.getPartitionWhereClauses(split));
     }
 }
